// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryParser node 1`] = `
Object {
  "fields": Array [
    Object {
      "args": Array [
        Object {
          "defaultValue": undefined,
          "description": "The ID of an object",
          "name": "id",
          "type": "ID!",
        },
      ],
      "fields": Array [
        Object {
          "args": Array [],
          "fields": Array [],
          "isConnection": false,
          "isNode": false,
          "name": "field1",
          "node": Object {
            "alias": null,
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "loc": Object {
              "end": 169,
              "start": 163,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 169,
                "start": 163,
              },
              "value": "field1",
            },
            "selectionSet": null,
          },
          "type": "String",
          "typeName": "Model1",
        },
      ],
      "isConnection": false,
      "isInterface": true,
      "isNode": false,
      "name": "node",
      "node": Object {
        "alias": null,
        "arguments": Array [
          Object {
            "kind": "Argument",
            "loc": Object {
              "end": 51,
              "start": 44,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 46,
                "start": 44,
              },
              "value": "id",
            },
            "value": Object {
              "kind": "StringValue",
              "loc": Object {
                "end": 51,
                "start": 48,
              },
              "value": "1",
            },
          },
        ],
        "directives": Array [],
        "kind": "Field",
        "loc": Object {
          "end": 97,
          "start": 39,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 43,
            "start": 39,
          },
          "value": "node",
        },
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 97,
            "start": 52,
          },
          "selections": Array [
            Object {
              "directives": Array [],
              "kind": "FragmentSpread",
              "loc": Object {
                "end": 79,
                "start": 74,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 79,
                  "start": 77,
                },
                "value": "F1",
              },
            },
          ],
        },
      },
      "type": "Node",
    },
  ],
  "nodeFields": Array [
    Object {
      "args": Array [],
      "fields": Array [],
      "isConnection": false,
      "isNode": false,
      "name": "field1",
      "node": Object {
        "alias": null,
        "arguments": Array [],
        "directives": Array [],
        "kind": "Field",
        "loc": Object {
          "end": 169,
          "start": 163,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 169,
            "start": 163,
          },
          "value": "field1",
        },
        "selectionSet": null,
      },
      "type": "String",
      "typeName": "Model1",
    },
  ],
  "text": "query Q1 {
  node(id: \\"1\\") {
    ...F1
  }
}
fragment F1 on Model1 {
  field1
}",
  "type": "nodeInterface",
}
`;

exports[`QueryParser simple 1`] = `
Object {
  "fields": Array [
    Object {
      "args": Array [],
      "fields": Array [
        Object {
          "args": Array [],
          "fields": Array [
            Object {
              "args": Array [],
              "fields": Array [
                Object {
                  "args": Array [],
                  "fields": Array [
                    Object {
                      "args": Array [],
                      "fields": Array [],
                      "isConnection": false,
                      "isNode": false,
                      "name": "field1",
                      "node": Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 178,
                          "start": 172,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 178,
                            "start": 172,
                          },
                          "value": "field1",
                        },
                        "selectionSet": null,
                      },
                      "type": "String",
                    },
                    Object {
                      "args": Array [],
                      "fields": Array [],
                      "isConnection": false,
                      "isFragment": false,
                      "isNode": false,
                      "name": "id",
                      "node": Object {
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                      },
                      "type": "ID!",
                    },
                  ],
                  "isConnection": false,
                  "isNode": true,
                  "name": "node",
                  "node": Object {
                    "alias": null,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 208,
                      "start": 134,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 138,
                        "start": 134,
                      },
                      "value": "node",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 208,
                        "start": 138,
                      },
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 178,
                            "start": 172,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 178,
                              "start": 172,
                            },
                            "value": "field1",
                          },
                          "selectionSet": null,
                        },
                        Object {
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "id",
                          },
                        },
                      ],
                    },
                  },
                  "type": "Model1",
                },
              ],
              "isConnection": false,
              "isNode": false,
              "name": "edges",
              "node": Object {
                "alias": null,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 234,
                  "start": 99,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 104,
                    "start": 99,
                  },
                  "value": "edges",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 234,
                    "start": 104,
                  },
                  "selections": Array [
                    Object {
                      "alias": null,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 208,
                        "start": 134,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 138,
                          "start": 134,
                        },
                        "value": "node",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "loc": Object {
                          "end": 208,
                          "start": 138,
                        },
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "loc": Object {
                              "end": 178,
                              "start": 172,
                            },
                            "name": Object {
                              "kind": "Name",
                              "loc": Object {
                                "end": 178,
                                "start": 172,
                              },
                              "value": "field1",
                            },
                            "selectionSet": null,
                          },
                          Object {
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "id",
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "type": "[Model1ConnectionEdge]!",
            },
          ],
          "isConnection": true,
          "isNode": false,
          "name": "model1",
          "node": Object {
            "alias": null,
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "loc": Object {
              "end": 256,
              "start": 67,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 73,
                "start": 67,
              },
              "value": "model1",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 256,
                "start": 73,
              },
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 234,
                    "start": 99,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 104,
                      "start": 99,
                    },
                    "value": "edges",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "loc": Object {
                      "end": 234,
                      "start": 104,
                    },
                    "selections": Array [
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 208,
                          "start": 134,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 138,
                            "start": 134,
                          },
                          "value": "node",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "loc": Object {
                            "end": 208,
                            "start": 138,
                          },
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "loc": Object {
                                "end": 178,
                                "start": 172,
                              },
                              "name": Object {
                                "kind": "Name",
                                "loc": Object {
                                  "end": 178,
                                  "start": 172,
                                },
                                "value": "field1",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "id",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          "type": "Model1Connection",
        },
        Object {
          "args": Array [],
          "fields": Array [],
          "isConnection": false,
          "isFragment": false,
          "isNode": false,
          "name": "id",
          "node": Object {
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "id",
            },
          },
          "type": "ID!",
        },
      ],
      "isConnection": false,
      "isNode": true,
      "name": "viewer",
      "node": Object {
        "alias": null,
        "arguments": Array [],
        "directives": Array [],
        "kind": "Field",
        "loc": Object {
          "end": 274,
          "start": 39,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 45,
            "start": 39,
          },
          "value": "viewer",
        },
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 274,
            "start": 45,
          },
          "selections": Array [
            Object {
              "alias": null,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 256,
                "start": 67,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 73,
                  "start": 67,
                },
                "value": "model1",
              },
              "selectionSet": Object {
                "kind": "SelectionSet",
                "loc": Object {
                  "end": 256,
                  "start": 73,
                },
                "selections": Array [
                  Object {
                    "alias": null,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 234,
                      "start": 99,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 104,
                        "start": 99,
                      },
                      "value": "edges",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 234,
                        "start": 104,
                      },
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 208,
                            "start": 134,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 138,
                              "start": 134,
                            },
                            "value": "node",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "loc": Object {
                              "end": 208,
                              "start": 138,
                            },
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "loc": Object {
                                  "end": 178,
                                  "start": 172,
                                },
                                "name": Object {
                                  "kind": "Name",
                                  "loc": Object {
                                    "end": 178,
                                    "start": 172,
                                  },
                                  "value": "field1",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
            Object {
              "kind": "Field",
              "name": Object {
                "kind": "Name",
                "value": "id",
              },
            },
          ],
        },
      },
      "type": "Viewer",
    },
  ],
  "nodeFields": Array [
    Object {
      "args": Array [],
      "fields": Array [],
      "isConnection": false,
      "isNode": false,
      "name": "field1",
      "node": Object {
        "alias": null,
        "arguments": Array [],
        "directives": Array [],
        "kind": "Field",
        "loc": Object {
          "end": 178,
          "start": 172,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 178,
            "start": 172,
          },
          "value": "field1",
        },
        "selectionSet": null,
      },
      "type": "String",
    },
    Object {
      "args": Array [],
      "fields": Array [],
      "isConnection": false,
      "isFragment": false,
      "isNode": false,
      "name": "id",
      "node": Object {
        "kind": "Field",
        "name": Object {
          "kind": "Name",
          "value": "id",
        },
      },
      "type": "ID!",
    },
  ],
  "text": "query Q1 {
  viewer {
    model1 {
      edges {
        node {
          field1
          id
        }
      }
    }
    id
  }
}
",
  "type": "connection",
}
`;
